[project]
name = "pyspark-tdd-scaffold"
version = "0.2.0"
description = "opinionated example project demonstrating test driven pyspark development"
authors = [
    { name = "Jay Jiang", email = "48189996+init-jay@users.noreply.github.com" }
]
requires-python = "==3.12.3"
dependencies = [
    "pyspark==4.0.0",
    "delta-spark==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "chispa>=0.9.2",
    "moto>=3.1.16"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deltalake*", "integration*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -rx -p no:warnings"
testpaths = [
    "tests",
    "integration",
]
